--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@ body {
 }
 
 a {
-  display: block;
   text-decoration: none;
   color: #ddd;
 }
@@ -52,10 +51,16 @@ button {
   min-height: 200vh;
 }
 
+.main {
+  width: 100%;
+  max-width: 1200px;
+  min-height: 130vh;
+}
+
 .navigation {
   position: fixed;
   width: 100%;
-  max-width: 1024px;
+  max-width: 1200px;
   z-index: 10;
 }
 
@@ -125,6 +130,7 @@ button {
   position: relative;
   width: 50px;
   height: 50px;
+  margin-right: 5px;
 }
 
 .navigation .mobile-menu .mobile-nav .burger-btn .burger-btn-span {
@@ -274,22 +280,57 @@ button {
   position: absolute;
   width: 100%;
   height: 100%;
+  font-size: 1rem;
 }
 
 .header .header-links-container .header-link {
   position: absolute;
-  top: 20%;
-  left: 20%;
+  top: 25%;
+  left: 33%;
+}
+
+.header .header-links-container .header-link:nth-child(2) {
+  top: 37%;
+  left: 67%;
+}
+
+.header .header-links-container .header-link:nth-child(3) {
+  top: 47%;
+  left: 35%;
+}
+
+.header .header-links-container .header-link:nth-child(4) {
+  top: 65%;
+  left: 57%;
 }
 
 .header .header-links-container .header-link::after {
   content: "";
   position: absolute;
-  top: 0;
+  top: -10px;
   left: -25px;
-  width: 5px;
-  height: 5px;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
   background-color: #ddd;
+  -webkit-box-shadow: 0 0 8px 1px white;
+          box-shadow: 0 0 8px 1px white;
+}
+
+.about-me {
+  width: 100%;
+  padding: 30px 20px;
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  color: #ddd;
+}
+
+.about-me .title-section {
+  padding: 10px 0;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.about-me .text-section {
+  color: #bcbcbc;
 }
 /*# sourceMappingURL=main.css.map */
