--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -673,20 +673,35 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    font-size: 1rem;
     .header-link {
       position: absolute;
-      top: 20%;
-      left: 20%;
+      top: 25%;
+      left: 33%;
     }
+    .header-link:nth-child(2) {
+      top: 37%;
+      left: 67%;
+    }
+    .header-link:nth-child(3) {
+      top: 47%;
+      left: 35%;
+    }
+    .header-link:nth-child(4) {
+      top: 65%;
+      left: 57%;
+    }
+
     .header-link::after {
       content: "";
       position: absolute;
-      top: 0;
+      top: -10px;
       left: -25px;
-      width: 5px;
-      height: 5px;
+      width: 8px;
+      height: 8px;
       border-radius: 50%;
       background-color: $font-color;
+      box-shadow: 0 0 8px 1px rgba(255, 255, 255, 1);
     }
   }
 }
