--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -15,3 +15,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin title-section {
+  padding: 10px 0;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
