--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,7 +1,7 @@
 .navigation {
   position: fixed;
   width: 100%;
-  max-width: 1024px;
+  max-width: 1200px;
   z-index: 10;
   .mobile-menu {
     display: flex;
@@ -36,6 +36,7 @@
         position: relative;
         width: 50px;
         height: 50px;
+        margin-right: 5px;
         .burger-btn-span {
           position: relative;
           width: 25px;
