--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -23,9 +23,14 @@ button {
   width: 100%;
   min-height: 200vh;
   // background: $main-background-top;
+  overflow: hidden;
 }
 .main {
   width: 100%;
   max-width: $max-width;
   min-height: 130vh;
+}
+i {
+  display: flex;
+  flex-direction: column;
 }
