--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,7 @@ i {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-size: 2.3rem;
 }
 
 .navigation {
@@ -337,7 +338,7 @@ i {
 
 .about-me .title-section {
   color: #ddd;
-  padding: 10px 0;
+  padding: 20px 0;
   font-size: 1.5rem;
   font-weight: 500;
 }
@@ -358,7 +359,7 @@ i {
 
 .skills .title-section {
   color: #ddd;
-  padding: 10px 0;
+  padding: 20px 0;
   font-size: 1.5rem;
   font-weight: 500;
 }
@@ -369,17 +370,48 @@ i {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding: 10px;
   width: 100%;
-  color: white;
+  color: #c4c4c4;
 }
 
-.skills .skills-wrapper .skill-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+.skills .skills-wrapper .skill-font {
+  width: 25%;
+  padding: 10px 5px;
+  font-size: 3rem;
+  text-align: center;
+}
+
+.skills .skills-wrapper .skill-font:hover {
+  cursor: pointer;
+  color: #fa4141;
+}
+
+.skills .skills-wrapper .skill-font:hover:nth-child(2) {
+  color: #7d7dfa;
+}
+
+.skills .skills-wrapper .skill-font:hover:nth-child(3) {
+  color: #cc6699;
+}
+
+.skills .skills-wrapper .skill-font:hover:nth-child(4) {
+  color: #f0db4f;
+}
+
+.skills .skills-wrapper .skill-font:hover:nth-child(5) {
+  color: #61dbfb;
+}
+
+.skills .skills-wrapper .skill-font:hover:nth-child(6) {
+  color: #602c50;
+}
+
+.skills .skills-wrapper .skill-font:hover:nth-child(7) {
+  color: #f34f29;
+}
+
+.skills .skills-wrapper .skill-font:hover:nth-child(8) {
+  color: #cc3534;
 }
 /*# sourceMappingURL=main.css.map */
