--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -22,5 +22,18 @@
   font-size: 1.5rem;
   font-weight: 500;
 }
-@mixin skill-box {
+@mixin project-title {
+  padding: 5px;
+  letter-spacing: 1px;
+  color: $font-color;
+  font-weight: 500;
+}
+@mixin project-img {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  // background-image: url(../img/AccoPiano.jpg);
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
