--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -28,12 +28,6 @@
   color: $font-color;
   font-weight: 500;
 }
-@mixin project-img {
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  // background-image: url(../img/AccoPiano.jpg);
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+// @mixin project-img {
+//   width: 80%;
+// }
