--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,36 +1,24 @@
 .projects {
   width: 100%;
-  min-height: 100vh;
-  padding: 30px 20px;
+  padding: 30px 20px 10px 20px;
   background: $main-background-bottom;
   .title-section {
     @include title-section;
   }
-  // background-color: red;
   .project-box {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 270px;
     padding: 15px;
     background: $main-background-top;
     .title-project {
       @include project-title;
     }
     .project-img {
-      @include project-img;
-      background-image: url(../img/Metronome.jpg);
-    }
-    .project-img:nth-child(2) {
-      background-image: url(../img/AccoPiano.jpg);
-    }
-    .project-img:nth-child(3) {
-      background-image: url(../img/DeepBreath.jpg);
-    }
-    .project-img:nth-child(4) {
-      background-image: url(../img/Metronome.jpg);
+      width: 100%;
+      padding: 10px;
     }
     .project-btn-box {
       margin: 10px;
