--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -674,6 +674,9 @@
     width: 100%;
     height: 100%;
     font-size: 1rem;
+    @media (min-width: 768px) {
+      font-size: 1.3rem;
+    }
     .header-link {
       position: absolute;
       top: 25%;
