--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -3,6 +3,9 @@
   min-height: 30vh;
   padding: 30px 20px 0 20px;
   background: $main-background-top;
+  @media (min-width: 768px) {
+    padding: 30px 100px;
+  }
   .title-section {
     @include title-section;
   }
