--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -9,6 +9,9 @@
     flex-direction: column;
     width: 100%;
     height: 50px;
+    @media (min-width: 1024px) {
+      display: none;
+    }
 
     .mobile-nav {
       display: flex;
@@ -102,5 +105,62 @@
     .mobile-list.active {
       transform: translateX(0);
     }
+  }
+  .desktop-menu {
+    display: none;
+    @media (min-width: 1024px) {
+      display: flex;
+      justify-content: space-around;
+      width: 100vw;
+      transition: 0.5s;
+    }
+  }
+  .desktop-menu.bcg {
+    display: flex;
+  }
+  .desktop-menu.bcg {
+    background: #090a0f;
+  }
+  .desktop-title-link {
+    display: flex;
+    // display: none;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px 20px;
+    margin-left: 45px;
+    transform: translateX(25vw);
+    transition: 0.5s;
+
+    .desktop-name {
+      line-height: 1.25rem;
+      font-size: 0.8rem;
+      font-weight: 400;
+    }
+    .desktop-title {
+      font-size: 0.5rem;
+      color: darken($font-color, 20%);
+    }
+  }
+  .desktop-title-link.bcg {
+    transform: translateX(0);
+  }
+  .desktop-nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-right: 25px;
+    opacity: 0;
+    transition: 0.3s;
+  }
+  .desktop-nav.bcg {
+    opacity: 1;
+  }
+  .desktop-link {
+    padding: 0 15px;
+    font-size: 0.7rem;
+    transition: 0.3s;
+  }
+  .desktop-link:hover {
+    text-shadow: 0px 0px 5px $font-color;
   }
 }
