--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -20,6 +20,7 @@
       padding: 25px 5px;
       font-size: 3rem;
       text-align: center;
+      transition: 0.3s;
     }
     .skill-font:hover {
       cursor: pointer;
