--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -3,11 +3,15 @@
   padding: 30px 20px;
   background: $main-background-bottom;
   color: $font-color;
+  z-index: 10;
   @media (min-width: 768px) {
     padding: 30px 100px;
   }
   .title-section {
     @include title-section;
+    @media (min-width: 1024px) {
+      margin-bottom: 25px;
+    }
   }
   .text-section {
     line-height: 1.35rem;
