--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 0 20px 20px 20px;
   background: $main-background-top;
+  z-index: 10;
   @media (min-width: 768px) {
     padding: 30px 100px;
   }
@@ -22,9 +23,13 @@
     text-align: center;
     color: darken($font-color, 10%);
     font-size: 0.85rem;
+    transition: 0.3s ease-in-out;
     @media (min-width: 768px) {
       font-size: 1rem;
     }
+  }
+  .contact-link:hover {
+    text-shadow: 0 0 5px $font-color;
   }
   .contact-awesome {
     width: 25px;
