--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,6 +4,7 @@
   width: 100%;
   background: $main-background-top;
   overflow: hidden;
+  z-index: 10;
   .stars-container {
     position: absolute;
     width: 100%;
@@ -690,6 +691,7 @@
     .header-link:hover {
       text-shadow: 0px 0px 5px $font-color;
     }
+
     .header-link:nth-child(2) {
       top: 42%;
       left: 77%;
@@ -714,7 +716,6 @@
         left: 60%;
       }
     }
-
     .header-link::after {
       content: "";
       position: absolute;
@@ -725,6 +726,10 @@
       border-radius: 50%;
       background-color: $font-color;
       box-shadow: 0 0 8px 1px rgba(255, 255, 255, 1);
+      transition: 0.4s ease-in-out;
+    }
+    .header-link:hover.header-link::after {
+      box-shadow: 0 0 8px 5px rgba(255, 255, 255, 1);
     }
   }
 }
