--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -3,11 +3,15 @@
   min-height: 30vh;
   padding: 30px 20px 0 20px;
   background: $main-background-top;
+  z-index: 10;
   @media (min-width: 768px) {
     padding: 30px 100px;
   }
   .title-section {
     @include title-section;
+    @media (min-width: 1024px) {
+      margin-bottom: 25px;
+    }
   }
   .skills-wrapper {
     display: flex;
