--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -47,6 +47,7 @@
       width: 90%;
       height: 50%;
       padding: 10px;
+      border-radius: 13px;
     }
     .project-btn-box {
       margin: 10px;
