--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -11,13 +11,7 @@
   }
   .contact-links-wrapper {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    @media (min-width: 768px) {
-      flex-direction: row;
-      justify-content: space-evenly;
-      margin-top: 10px;
-    }
+    justify-content: space-evenly;
   }
   .contact-link {
     text-align: center;
@@ -37,6 +31,44 @@
     font-size: 0.85rem;
     @media (min-width: 768px) {
       font-size: 1rem;
+    }
+  }
+  .contact-form {
+    margin: 10px auto;
+    .form-control {
+      width: 90%;
+      margin-bottom: 10px;
+      background: transparent;
+      border: none;
+      border-bottom: 1px solid darken($font-color, 60%);
+      font-size: 1rem;
+      color: $font-color;
+    }
+    .form-control.submit {
+      border: none;
+      padding: 5px;
+      color: $font-color;
+      box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+        2px 2px 6px rgba(0, 0, 0, 0.8);
+    }
+    .form-control.submit:hover {
+      box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+        2px 2px 6px rgba(2, 2, 2, 0.8),
+        inset -1px -1px 3px rgba(255, 255, 255, 0.05),
+        inset 2px 2px 6px rgba(2, 2, 2, 0.5);
+    }
+    .form-control.submit:checked {
+      box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.1),
+        inset 2px 2px 6px rgba(2, 2, 2, 1);
+      text-shadow: 0 0 5px #00fff1, 0 0 20px #00fff1;
+    }
+    .form-control.message {
+      color: $font-color;
+      margin-top: 10px;
+      background-color: rgba(255, 255, 255, 0.05);
+    }
+    ::placeholder {
+      color: $font-color;
     }
   }
 }
