--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -68,7 +68,7 @@
       background-color: rgba(255, 255, 255, 0.05);
     }
     ::placeholder {
-      color: $font-color;
+      color: darken($font-color, 25%);
     }
   }
 }
