--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -8,10 +8,12 @@
   }
   .title-section {
     @include title-section;
+    margin-bottom: 30px;
   }
   .contact-links-wrapper {
     display: flex;
     justify-content: space-evenly;
+    margin-top: 30px;
   }
   .contact-link {
     text-align: center;
@@ -34,10 +36,13 @@
     }
   }
   .contact-form {
+    width: 100%;
+    max-width: 550px;
     margin: 10px auto;
     .form-control {
-      width: 90%;
-      margin-bottom: 10px;
+      width: 100%;
+
+      margin: 0 auto 10px;
       background: transparent;
       border: none;
       border-bottom: 1px solid darken($font-color, 60%);
@@ -52,6 +57,7 @@
         2px 2px 6px rgba(0, 0, 0, 0.8);
     }
     .form-control.submit:hover {
+      cursor: pointer;
       box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
         2px 2px 6px rgba(2, 2, 2, 0.8),
         inset -1px -1px 3px rgba(255, 255, 255, 0.05),
