--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -39,9 +39,11 @@
     width: 100%;
     max-width: 550px;
     margin: 10px auto;
+    display: flex;
+    flex-direction: column;
     .form-control {
       width: 100%;
-
+      padding: 5px;
       margin: 0 auto 10px;
       background: transparent;
       border: none;
@@ -52,6 +54,8 @@
     .form-control.submit {
       border: none;
       padding: 5px;
+      width: 60%;
+      margin: 0 auto;
       color: $font-color;
       box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
         2px 2px 6px rgba(0, 0, 0, 0.8);
@@ -74,7 +78,8 @@
       background-color: rgba(255, 255, 255, 0.05);
     }
     ::placeholder {
-      color: darken($font-color, 25%);
+      padding: 5px;
+      color: darken($font-color, 5%);
     }
   }
 }
