--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -682,6 +682,7 @@
       position: absolute;
       top: 25%;
       left: 20%;
+
       transition: 0.3s ease-in-out;
       @media (min-width: 1024px) {
         top: 30%;
@@ -689,7 +690,8 @@
       }
     }
     .header-link:hover {
-      text-shadow: 0px 0px 5px $font-color;
+      color: $hover-color;
+      text-shadow: 0px 0px 1px $hover-color;
     }
 
     .header-link:nth-child(2) {
@@ -721,14 +723,15 @@
       position: absolute;
       top: -10px;
       left: -25px;
-      width: 8px;
-      height: 8px;
+      width: 4px;
+      height: 4px;
       border-radius: 50%;
       background-color: $font-color;
       box-shadow: 0 0 8px 1px rgba(255, 255, 255, 1);
-      transition: 0.4s ease-in-out;
+      transition: 1s;
     }
     .header-link:hover.header-link::after {
+      color: $hover-color;
       box-shadow: 0 0 8px 5px rgba(255, 255, 255, 1);
     }
   }
