--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -17,7 +17,7 @@
 }
 
 @mixin title-section {
-  color: $font-color;
+  color: $hover-color;
   padding: 20px 0;
   font-size: 1.5rem;
   font-weight: 500;
