--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -137,6 +137,7 @@
       line-height: 1.25rem;
       font-size: 0.8rem;
       font-weight: 400;
+      color: $hover-color;
     }
     .desktop-title {
       font-size: 0.5rem;
@@ -163,6 +164,7 @@
     transition: 0.3s;
   }
   .desktop-link:hover {
-    text-shadow: 0px 0px 5px $font-color;
+    color: $hover-color;
+    text-shadow: 0px 0px 1px $hover-color;
   }
 }
