--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -31,6 +31,7 @@
     justify-content: center;
     width: 100%;
     padding: 15px;
+    border-radius: 4px;
     background: $main-background-top;
     @media (min-width: 768px) {
       width: 90%;
