--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,3 +6,5 @@ $main-background-bottom: radial-gradient(
   #090a0f 100%
 );
 $main-background-top: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
+
+$hover-color: rgb(255, 255, 255);
