--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -675,6 +675,8 @@
     width: 100%;
     height: 100%;
     font-size: 1rem;
+    opacity: 0;
+    transition: 2s;
     @media (min-width: 768px) {
       font-size: 1.3rem;
     }
@@ -686,7 +688,7 @@
       transition: 0.3s ease-in-out;
       @media (min-width: 1024px) {
         top: 30%;
-        left: 30%;
+        left: 35%;
       }
     }
     .header-link:hover {
@@ -696,26 +698,26 @@
 
     .header-link:nth-child(2) {
       top: 42%;
-      left: 77%;
+      left: 72%;
       @media (min-width: 1024px) {
-        top: 39%;
-        left: 64%;
+        top: 37%;
+        left: 62%;
       }
     }
     .header-link:nth-child(3) {
       top: 52%;
       left: 25%;
       @media (min-width: 1024px) {
-        top: 60%;
-        left: 35%;
+        top: 58%;
+        left: 39%;
       }
     }
     .header-link:nth-child(4) {
       top: 72%;
       left: 65%;
       @media (min-width: 1024px) {
-        top: 70%;
-        left: 60%;
+        top: 65%;
+        left: 59%;
       }
     }
     .header-link::after {
@@ -734,5 +736,8 @@
       color: $hover-color;
       box-shadow: 0 0 8px 5px rgba(255, 255, 255, 1);
     }
+  }
+  .header-links-container.visible {
+    opacity: 1;
   }
 }
