--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -32,12 +32,13 @@
     width: 100%;
     padding: 15px;
     border-radius: 4px;
-    background: $main-background-top;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
     @media (min-width: 768px) {
       width: 90%;
       @media (min-width: 1024px) {
         width: 45%;
-        height: 350px;
+        height: 330px;
         margin: 5px auto;
       }
     }
@@ -54,7 +55,7 @@
       margin: 10px;
     }
     .btn-link-project {
-      padding: 0 15px;
+      margin: 0 15px;
       transition: 0.3s;
     }
     .btn-link-project:hover {
@@ -66,5 +67,11 @@
       font-size: 0.75rem;
       color: darken($font-color, 10%);
     }
+  }
+  .project-box:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+  .project-box:hover .btn-link-project {
+    border-bottom: 1px solid $font-color;
   }
 }
