--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,10 @@ form {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: fixed;
+  top: 50px;
+  left: 0;
+  width: 100%;
   padding: 15px;
   line-height: 2rem;
   background-color: rgba(0, 0, 0, 0.8);
