--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 0 20px 20px 20px;
   background: $main-background-top;
+  transition: 0.3s;
   z-index: 10;
   @media (min-width: 768px) {
     padding: 30px 100px;
@@ -25,6 +26,7 @@
     }
   }
   .contact-link:hover {
+    color: $hover-color;
     text-shadow: 0 0 5px $font-color;
   }
   .contact-awesome {
@@ -95,4 +97,13 @@
       font-size: 0.9rem;
     }
   }
+}
+.contact.reveal {
+  position: relative;
+  transform: translateY(50px);
+  opacity: 0;
+}
+.contact.reveal.slide {
+  transform: translateY(0);
+  opacity: 1;
 }
