--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -104,6 +104,7 @@
       transition: ease-in-out 0.3s;
 
       @media (min-width: 768px) {
+        top: 80px;
         padding: 25px;
       }
     }
