--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -42,6 +42,7 @@
         margin: 5px auto;
       }
     }
+
     .title-project {
       @include project-title;
     }
@@ -67,6 +68,15 @@
       font-size: 0.75rem;
       color: darken($font-color, 10%);
     }
+  }
+  .project-box.reveal {
+    position: relative;
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  .project-box.reveal.slide {
+    transform: translateY(0px);
+    opacity: 1;
   }
   .project-box:hover {
     background-color: rgba(0, 0, 0, 0.05);
