--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -18,6 +18,7 @@
     margin: 10px auto;
     display: flex;
     flex-direction: column;
+    transition: 0.3s;
     .form-control {
       width: 100%;
       padding: 5px;
@@ -85,6 +86,15 @@
       font-size: 1rem;
     }
   }
+  .contact-form.reveal {
+    position: relative;
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  .contact-form.reveal.slide {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 .footer {
   width: 100%;
@@ -98,13 +108,4 @@
       font-size: 0.9rem;
     }
   }
-}
-.contact.reveal {
-  position: relative;
-  transform: translateY(50px);
-  opacity: 0;
-}
-.contact.reveal.slide {
-  transform: translateY(0);
-  opacity: 1;
 }
