--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -51,6 +51,10 @@
       height: 50%;
       padding: 10px;
       border-radius: 13px;
+      @media (min-width: 1024px) {
+        width: 300px;
+        height: 200px;
+      }
     }
     .project-btn-box {
       margin: 10px;
